// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JMBus Test Case > Decode negative temperature 1`] = `
{
  "dataRecord": [
    {
      "description": "Energy",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ENERGY_WATT",
      "unit": "Wh",
      "value": 0,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0,
    },
    {
      "description": "On Time",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ON_TIME",
      "unit": "h",
      "value": 14122,
    },
    {
      "description": "Flow Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_FLOW_TEMP",
      "unit": "°C",
      "value": 24.1,
    },
    {
      "description": "Return Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 5,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_RETURN_TEMP",
      "unit": "°C",
      "value": -4,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 130,
    "Address": "a732061399670704",
    "Id": "67991306",
    "Manufacturer": "LUG",
    "Medium": "Heat",
    "Status": 16,
    "StatusString": "temporary error",
    "Version": 7,
  },
}
`;

exports[`JMBus Test Case > Decryption Test - Good Key 1`] = `
{
  "dataRecord": [
    {
      "description": "Info register (0x20)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_KAMSTRUP_INFO_20",
      "unit": "",
      "value": 0,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 474.24,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 473.247,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "2d2c692845631b16",
    "Id": "63452869",
    "Manufacturer": "KAM",
    "Medium": "Cold water",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 27,
  },
}
`;

exports[`JMBus Test Case > General Test #1 1`] = `
{
  "dataRecord": [
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 1,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 84,
    "Address": "333003000000011b",
    "Id": "00000003",
    "Manufacturer": "LAS",
    "Medium": "Room sensor (e.g. temperature or humidity)",
    "Status": 32,
    "StatusString": "specific to manufacturer",
    "Version": 1,
  },
}
`;

exports[`JMBus Test Case > General Test #2 1`] = `
{
  "dataRecord": [
    {
      "description": "Energy",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ENERGY_WATT",
      "unit": "Wh",
      "value": 0,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0,
    },
    {
      "description": "On Time",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ON_TIME",
      "unit": "h",
      "value": 11738,
    },
    {
      "description": "Flow Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_FLOW_TEMP",
      "unit": "°C",
      "value": 21.7,
    },
    {
      "description": "Return Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 5,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_RETURN_TEMP",
      "unit": "°C",
      "value": 21.7,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 42,
    "Address": "a732061399670704",
    "Id": "67991306",
    "Manufacturer": "LUG",
    "Medium": "Heat",
    "Status": 16,
    "StatusString": "temporary error",
    "Version": 7,
  },
}
`;

exports[`JMBus Test Case > Magnetic Sensor Test #1 1`] = `
{
  "dataRecord": [
    {
      "description": "Units for H.C.A.",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_HCA",
      "unit": "",
      "value": 110,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 136,
    "Address": "333015010100021d",
    "Id": "00010115",
    "Manufacturer": "LAS",
    "Medium": "Reserved for sensors",
    "Status": 4,
    "StatusString": "battery low",
    "Version": 2,
  },
}
`;

exports[`JMBus Test Case > Magnetic Sensor Test #2 1`] = `
{
  "dataRecord": [
    {
      "description": "Error flags (binary); Standard conform",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 0,
    },
    {
      "description": "Access number (transmission count)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ACCESS_NO",
      "unit": "",
      "value": 2300,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 121,
    "Address": "333015010100021d",
    "Id": "00010115",
    "Manufacturer": "LAS",
    "Medium": "Reserved for sensors",
    "Status": 4,
    "StatusString": "battery low",
    "Version": 2,
  },
}
`;

exports[`JMBus Test Case > Short Telegram Test #1 1`] = `
{
  "dataRecord": [
    {
      "description": "Owner No; Unknown VIFE 0x15",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_OWNER_NO",
      "unit": "",
      "value": 4353,
    },
    {
      "description": "Energy",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ENERGY_WATT",
      "unit": "Wh",
      "value": 25879000,
    },
    {
      "description": "Units for H.C.A.; Unknown VIFE 0x07",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_HCA",
      "unit": "",
      "value": 43199,
    },
    {
      "description": "Units for H.C.A.; Unknown VIFE 0x08",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_HCA",
      "unit": "",
      "value": 20434,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 5,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 644.33,
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 6,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 0,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 7,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2015-09-09",
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 8,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2015-08-31",
    },
    {
      "description": "Energy",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 9,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_ENERGY_WATT",
      "unit": "Wh",
      "value": 25847000,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 10,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 642.32,
    },
    {
      "description": "Volume Flow",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 11,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME_FLOW",
      "unit": "m³/h",
      "value": 0.011,
    },
    {
      "description": "Flow Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 12,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_FLOW_TEMP",
      "unit": "°C",
      "value": 45.71,
    },
    {
      "description": "Return Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 13,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_RETURN_TEMP",
      "unit": "°C",
      "value": 28.44,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "2d2c06357260190c",
    "Id": "60723506",
    "Manufacturer": "KAM",
    "Medium": "Heat (Volume measured at flow temperature: inlet)",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 25,
  },
}
`;

exports[`JMBus Test Case > Short Telegram Test #2 1`] = `
{
  "dataRecord": [
    {
      "description": "Energy",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ENERGY_WATT",
      "unit": "Wh",
      "value": 2982000,
    },
    {
      "description": "Heating energy E8",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ENERGY_E8",
      "unit": "Wh",
      "value": 4430000,
    },
    {
      "description": "Heating energy E9",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ENERGY_E9",
      "unit": "Wh",
      "value": 1811000,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 68.57,
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 5,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 0,
    },
    {
      "description": "Volume Flow",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 6,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME_FLOW",
      "unit": "m³/h",
      "value": 0,
    },
    {
      "description": "Flow Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 7,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_FLOW_TEMP",
      "unit": "°C",
      "value": 29.93,
    },
    {
      "description": "Return Temperature",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 8,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_RETURN_TEMP",
      "unit": "°C",
      "value": 24.07,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "2d2c713785691c0c",
    "Id": "69853771",
    "Manufacturer": "KAM",
    "Medium": "Heat (Volume measured at flow temperature: inlet)",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 28,
  },
}
`;

exports[`JMBus Test Case > WMBus Demo Message Test #1 1`] = `
{
  "dataRecord": [
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE_TIME",
      "unit": "",
      "value": "2014-08-25 06:25",
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 1.234,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2013-12-31",
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0,
    },
    {
      "description": "Time point (during error state)",
      "devUnit": 0,
      "functionField": 3,
      "functionFieldText": "Value during error state",
      "number": 5,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2128-03-31",
    },
    {
      "description": "Unknown VIF 0x73",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 6,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_UNKNOWN",
      "unit": "",
      "value": "0",
    },
  ],
  "deviceInformation": {
    "AccessNumber": 225,
    "Address": "6532821851582c06",
    "Id": "58511882",
    "Manufacturer": "LSE",
    "Medium": "Warm Water (30 - 90 °C)",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 44,
  },
}
`;

exports[`JMBus Test Case > WMBus Demo Message Test #2 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 1.123,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE_TIME",
      "unit": "",
      "value": "2018-08-04 20:40",
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 257,
    },
    {
      "description": "Fabrication No",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_FABRICATION_NO",
      "unit": "",
      "value": 1820254513,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 5,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 6,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2000-01-01",
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 7,
      "storageNo": 2,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0,
    },
    {
      "description": "Energy; Duration of last upper limit exceed: 1",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 8,
      "storageNo": 2,
      "tariff": 0,
      "type": "VIF_ENERGY_JOULE",
      "unit": "J",
      "value": 643260000000,
    },
    {
      "description": "Power (minimum value)",
      "devUnit": 0,
      "functionField": 2,
      "functionFieldText": "Minimum value",
      "number": 9,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_THERMAL_POWER",
      "unit": "J/h",
      "value": -9520000000,
    },
    {
      "description": "Actuality Duration (during error state)",
      "devUnit": 0,
      "functionField": 3,
      "functionFieldText": "Value during error state",
      "number": 10,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ACTUALITY_DURATION",
      "unit": "s",
      "value": 5047607144,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 165,
    "Address": "2434685547165007",
    "Id": "16475568",
    "Manufacturer": "MAD",
    "Medium": "Water",
    "Status": 32,
    "StatusString": "specific to manufacturer",
    "Version": 80,
  },
}
`;

exports[`JMBus Test Case > WMBus Demo Message Test #3 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0.494,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2018-10-23",
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0.274,
    },
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 2,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 0.325,
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 5,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 1024,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 53,
    "Address": "496a022800440137",
    "Id": "49705932",
    "Manufacturer": "ZRI",
    "Medium": "Water",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 1,
  },
}
`;

exports[`OMS Examples > DIF 64bit integer as manufacturer specific 1`] = `
{
  "dataRecord": [
    {
      "description": "Unknown manufacturer specific VIF 0x7f",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TYPE_MANUFACTURER_UNKOWN",
      "unit": "",
      "value": "1234605616436508552",
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "ae0c785634120107",
    "Id": "12345678",
    "Manufacturer": "CEN",
    "Medium": "Water",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 1,
  },
}
`;

exports[`OMS Examples > DIF 64bit integer with calc 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": "1234605616436508.8",
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "ae0c785634120107",
    "Id": "12345678",
    "Manufacturer": "CEN",
    "Medium": "Water",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 1,
  },
}
`;

exports[`OMS Examples > Frame type B 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 876.543,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "ae0c785634120107",
    "Id": "12345678",
    "Manufacturer": "CEN",
    "Medium": "Water",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 1,
  },
}
`;

exports[`OMS Examples > Frame type B without CRC 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 876.543,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "ae0c785634120107",
    "Id": "12345678",
    "Manufacturer": "CEN",
    "Medium": "Water",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 1,
  },
}
`;

exports[`OMS Examples > wM-Bus Example with partial encryption 1`] = `
{
  "dataRecord": [
    {
      "description": "Units for H.C.A.",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_HCA",
      "unit": "",
      "value": 1234,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE",
      "unit": "",
      "value": "2007-04-30",
    },
    {
      "description": "Units for H.C.A.",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 1,
      "tariff": 0,
      "type": "VIF_HCA",
      "unit": "",
      "value": 23456,
    },
    {
      "description": "Customer location",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 4,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_CUSTOMER_LOCATION",
      "unit": "",
      "value": 12345678,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 0,
    "Address": "9344443322115537",
    "Id": "55667788",
    "Manufacturer": "QDS",
    "Medium": "Heat Cost Allocator",
    "Status": 4,
    "StatusString": "battery low",
    "Version": 85,
  },
}
`;

exports[`OMS Examples > wM-Bus Meter with Security profile A 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 28504.27,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE_TIME",
      "unit": "",
      "value": "2008-05-31 23:50",
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 0,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 42,
    "Address": "9315785634123303",
    "Id": "12345678",
    "Manufacturer": "ELS",
    "Medium": "Gas",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 51,
  },
}
`;

exports[`OMS Examples > wM-Bus Meter with integrated radio and Security profile B 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 28504.27,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE_TIME",
      "unit": "",
      "value": "2008-05-31 23:50",
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 0,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 117,
    "Address": "9315785634123303",
    "Id": "12345678",
    "Manufacturer": "ELS",
    "Medium": "Gas",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 51,
  },
}
`;

exports[`OMS Examples > wM-Bus Meter with radio adapter and Security profile B 1`] = `
{
  "dataRecord": [
    {
      "description": "Volume",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 1,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_VOLUME",
      "unit": "m³",
      "value": 28504.27,
    },
    {
      "description": "Time point",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 2,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_TIME_POINT_DATE_TIME",
      "unit": "",
      "value": "2008-05-31 23:50",
    },
    {
      "description": "Error flags (binary)",
      "devUnit": 0,
      "functionField": 0,
      "functionFieldText": "Instantaneous value",
      "number": 3,
      "storageNo": 0,
      "tariff": 0,
      "type": "VIF_ERROR_FLAGS",
      "unit": "",
      "value": 0,
    },
  ],
  "deviceInformation": {
    "AccessNumber": 117,
    "Address": "2448443322110337",
    "Id": "12345678",
    "Manufacturer": "ELS",
    "Medium": "Gas",
    "Status": 0,
    "StatusString": "no errors",
    "Version": 51,
  },
}
`;
